--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -504,10 +504,12 @@ section,
 .section {
   color: var(--default-color);
   background-color: var(--background-color);
-  padding: 60px 0;
+  padding: 30px 0;
   overflow: clip;
 }
-
+section#shadow-host-companion {
+  padding: 0px;
+}
 /*--------------------------------------------------------------
 # Global Section Titles
 --------------------------------------------------------------*/
